--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,14 @@
 {
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/server.js" },
-    { "source": "/(.*)", "destination": "/index.html" }
-  ]
+  "version": 2,
+  "builds": [
+    { "src": "api/**/*.js", "use": "@vercel/node" },
+    { "src": "dist/Travelwebsite/browser/**", "use": "@vercel/static" }
+  ],
+  "routes": [
+  { "src": "/assets/(.*)", "dest": "/dist/Travelwebsite/browser/assets/$1" },
+  { "src": "/(.*\\.js)", "dest": "/dist/Travelwebsite/browser/$1" },
+  { "src": "/(.*\\.css)", "dest": "/dist/Travelwebsite/browser/$1" },
+  { "src": "/api/(.*)", "dest": "/api/$1.js" },
+  { "src": "/(.*)", "dest": "/dist/Travelwebsite/browser/index.html" }
+]
 }
