--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,6 @@
   ],
   "routes": [
   { "src": "/api/(.*)", "dest": "/api/$1.js" },
-  { "src": "/(.*)", "dest": "/dist/Travelwebsite/browser/index.html" }
+  { "src": "/(.*)", "dest": "/index.html" }
 ]
 }
